@@ -1,5 +1,7 @@
 Changelog for Alias (v1.0.2-SNAPSHOT)
 
+2012-02-10 21:02:52 +0000    changed headers (James Richardson)
+2012-02-10 21:01:45 +0000    updated README (James Richardson)
 
 v1.0.1
 2012-02-08 19:32:36 +0000    changed CheckCommand to use longer year format in output (James Richardson)
